{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "6ff4aa7c-26f9-43fd-8f8f-3e700fad5cdb",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "10d3ac80-8525-49d2-b289-c7e5ff737e4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "9dcf7b97-de89-4f95-84f7-2cc35cf7e598",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "aec70445-5e38-458d-aed6-7faa968cece9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "510cd4cb-baaa-407c-9b91-4442214c40fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c3ee01a-a16a-42b5-94ac-c878f02f6eae",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13554f5c-28da-484a-a3d0-d33c996c263b",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebd8f89a-0120-4419-81b3-d1dfb1046451",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fd742a2-057b-47b2-adc9-2a8073bcf259",
                    "path": "*/{Back}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "b2195f7d-6197-4f05-888a-e4521f0bc098",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "c6f86bbf-9982-4d14-b682-976ba2566871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "e4b56f1e-9b96-4472-aab1-9132e6b4f2a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "1c57f5ce-d71b-4b24-89e9-2ff6e0c84418",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09ae51e8-b224-4eed-a32f-d224f9e8c18a",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb04ad59-14e9-43dd-be3b-b944998d0778",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ee82f35-255e-413b-b773-9bc53f0b39a8",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}